<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PokedexActivity">

    <TextView
        android:id="@+id/tvBoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boas_vindas_padrao"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBoasVindas"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/ivPokemon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/seu_pokemon"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tvPokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Nome: Pikachu" />

            <TextView
                android:id="@+id/tvPokemonType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                tools:text="Tipo: Elétrico" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etPokemonSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/digite_numero"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardResult" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar"
        app:layout_constraintBottom_toBottomOf="@+id/etPokemonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPokemonSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>